Tracker: Fix widget sizing on Details tab Assigned to widget was taking too much space, causing the labels to wrap

--- a/templates/default/app.css
+++ b/templates/default/app.css
@@ -19,7 +19,6 @@
 label.tracker_trIdEdit:before { content: "#"; }
 .headertext { color: black; font-size: 120%; }
 .lpadding5 { padding-left: 5px; }
-.tracker_assign { width:100% !important;}
 .redItalic { color: red; font-style: italic; }
 .low,.low_done,.normal,.normal_done,.high,.high_done,.urgent,.urgent_done { font-weight: bold; }
 .low,.low_done { color:#606060; }
